--- a/ecommerce.yml
+++ b/ecommerce.yml
@@ -1,6 +1,6 @@
 token:
-  expiration_time: 86400000
-  secret: user_token_ecommerce
+  expiration_time: 864
+  secret: value1
 
 gateway:
   ip: 192.168.219.152
