--- a/ecommerce.yml
+++ b/ecommerce.yml
@@ -1,6 +1,6 @@
 token:
-  expiration_time: 8640
-  secret: value2
+  expiration_time: 86400000
+  secret: my-token
 
 gateway:
   ip: 192.168.219.152
